Docs: production deployment guide + CLAUDE.md files
- README: production section (single self-contained jar, env-var table, build/run,
  optional TLS reverse proxy, first-run /server create flow)
- CLAUDE.md at root + backend/ + frontend/: architecture, commands, and the
  toolchain gotchas (Jackson 3, JDA 6 component packages, zh_TW bundle naming)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>